2000-10-13  Fernando Nasser  <fnasser@cygnus.com>

	* remote.c (putpkt_binary): Call read_frame, not getpkt. Log message.
	(read_frame): Do not call error() on communication error when
	reading checksum, but return failure instead and log message.

2000-10-13  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* varobj.c (type_changeable): Arrays are not changeable.
	Trying to check for updates was causing an error if the array lived
	in a register as gdb value_equal() cannot handle that case yet.

2000-10-13  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* varobj.c (varobj_update): Prevent uninitialized error code to be
	returned on type_changed.  Also, prevent value_equal() to be called
	for the types we do not want to test for updates.

2000-10-11  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	From Grant Edwards <grante@visi.com>
	This keeps the GUI alive while running an RDI target and lets the
	STOP button be used to stop the target.
	* remote-rdi.c (arm_rdi_stop): New function.  Implements target_stop.
	(init_rdi_ops): Set to_stop target vector entry to the above.
	* rdi-share/ardi.c (stop_request): New variable.  Tells when a stop
	has been requested.
	(angel_RDI_stop_request): New function. Registers that a stop has
	been requested.
	(angel_RDI_ExecuteOrStep): Add call to ui_loop_hook() in loop that
	waits while target is executing.  Initialize and reset stop_request.
	* rdi-share/ardi.h: Add declaration of angel_RDI_stop_request().

2000-10-12  Kevin Buettner  <kevinb@redhat.com>

	* remote-rdp.c (remote_rdp_xfer_inferior_memory): Protoize.
	* remote-sds.c (sds_xfer_memory): Protoize.
	* remote-sim.c (gdbsim_xfer_inferior_memory): Protoize.

2000-10-12  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	From Daniel Berlin <dberlin@redhat.com> :

	* symtab.h (SYMBOL_INIT_DEMANGLED_NAME): Initialize the symbol
 	language to auto instead of unknown, so it will try to demangle
 	the symbol.